insertado de todas las peliculpeliculas

--- a/accion.html
+++ b/accion.html
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	
 	<header>
 		<div class="container text-center">
 			<h1>CINE ALIVANE
@@ -35,6 +34,24 @@
 						en la Tierra de Mordor donde se extienden las sombras”.</p>
 				</div>
 			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/wood.jpg"/>
+					<h4>ELIJAH WOOD</h4>
+					<h5>Frodo Bolson</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/bloom.jpg"/>
+					<h4>ORLANDO BLOOM</h4>
+					<h5>Legolas</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/viggo.jpg"/>
+					<h4>VIGGO MONTENSEN</h4>
+					<h5>Aragorn</h5>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section class="insurgente">
@@ -48,12 +65,30 @@
 					<p>La historia de Insurgente comienza exactamente donde terminó la primera: la guerra ha estallado y nuevas alianzas se han formado para tomar parte en ella. Después de que el día de iniciación, en que el Tris Prior debía elegir la facción a la que quería pertenecer, se convirtiese en un total desastre, la protagonista centrará toda su fuerza y voluntad en proteger a sus seres queridos. Además deberá enfrentarse a las dudas que tiene sobre desdicha y benevolencia, política y amor e identidad y lealtad, lo cual hará que su corazón se debata entre varios dilemas.</p>
 				</div>
 			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/prior.jpg"/>
+					<h4>SHAILENE WOODLEY</h4>
+					<h5>Beatrice Prior</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/tobias.jpg"/>
+					<h4>THEO JAMES</h4>
+					<h5>Tobias Eaton</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/ancel.jpg"/>
+					<h4>ANSEL ELGORT</h4>
+					<h5>Caleb Prior</h5>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section class="central">
 		<div class="container">
-			<h1>Central Inteligente</h1>
 			<div class="row">
+				<h2>CENTRAL INTELIGENTE</h2>
 				<div class="col-xs-12 col-lg-6">
 					<iframe width="100%" height="315" src="https://www.youtube.com/embed/MxEw3elSJ8M" frameborder="0" allowfullscreen></iframe>
 				</div>
@@ -62,12 +97,30 @@
 					Cuando en la víspera de una reunión de antiguos alumnos Calvin se reúne con Bob, su sorpresa será enorme al descubrir que ese tímido chico que solía ser el perdedor de la escuela y al que todos acosaban se ha convertido en un asesino a sueldo de la Agencia Central de Inteligencia. Claro que el asombro será mayor cuando Calvin se vea completamente inmerso en el peligroso mundo del espionaje internacional. Para cuando la ex estrella de los deportes se dé cuenta del embrollo en el que se ha metido, ya será demasiado tarde. Los dos antiguos compañeros del instituto se verán arrastrados a un mundo de tiroteos, traiciones e investigación, que les obligará a jugarse el cuello en incontables ocasiones. Y es que los dos tendrán que conseguir sobrevivir mientras hacen frente a multitud de villanos. </p>
 				</div>
 			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/bob.jpg"/>
+					<h4>DWAYNE JOHNSON</h4>
+					<h5>Bob</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/kevin.jpg"/>
+					<h4>KEVIN HART</h4>
+					<h5>Calvin Joyner</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/higth.jpeg"/>
+					<h4>KRISTEN ANNESE</h4>
+					<h5>high School Student</h5>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section class="egipto">
 		<div class="container">
-			<h1>dioses de egipto</h1>
 			<div class="row">
+				<h2>DIOSES DE EGIPTO</h2>
 				<div class="col-xs-12 col-lg-6">
 					<iframe width="100%" height="315" src="https://www.youtube.com/embed/j1a9EEXhD6U" frameborder="0" allowfullscreen></iframe>
 				</div>
@@ -76,12 +129,30 @@
 					A lo largo de su travesía, cuyo objetivo es poner fin al caos que está destruyendo su cultura, el dios y el mortal lucharán contra toda clase de serpientes, esfinges y dioses gigantescos. Una historia de acción, aventura y romance basada en la antigua mitología egipcia.</p>
 				</div>
 			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/set.jpg"/>
+					<h4>GERARD BUTLER</h4>
+					<h5>Set</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/horus.jpg"/>
+					<h4>NIKOLAJ</h4>
+					<h5>Horus</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/zaya.jpg"/>
+					<h4>COURTNEY EATON</h4>
+					<h5>Zaya</h5>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section class = "independencia">
 		<div class="container">
-			<h1>Dia de la Independencia</h1>
 			<div class="row">
+				<h1>DIA DE LA INDEPENDENCIA</h1>
 				<div class="col-xs-12 col-lg-6">
 					<iframe width="100%" height="315" src="https://www.youtube.com/embed/PDdh0fGhuvM" frameborder="0" allowfullscreen></iframe>
 				</div>
@@ -90,12 +161,30 @@
 					Pero nada les puede preparar para enfrentarse a la avanzada fuerza sin precedentes de los alienígenas atacantes. Tan solo el ingenio de unos pocos valientes hombres y mujeres podrá evitar la destrucción del mundo, que se encuentra de nuevo al borde de la extinción total.  </p>
 				</div>
 			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/smith.jpg"/>
+					<h4>WILL SMITH</h4>
+					<h5>Steven Hiller</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/david.jpg"/>
+					<h4>JEFF GOLDBLUM</h4>
+					<h5>David Levinson</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/bill.jpg"/>
+					<h4>BILL PULLMAN</h4>
+					<h5>Thomas J. Whitmore</h5>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section class="tarzan">
 		<div class="container">
-			<h1>La Leyenda De Tarzan</h1>
 			<div class="row">
+				<h2>LA LEYENDA DE TARZAN</h2>
 				<div class="col-xs-12 col-lg-6">
 					<iframe width="100%" height="315" src="https://www.youtube.com/embed/6VsT3QMrq00" frameborder="0" allowfullscreen></iframe>
 				</div>
@@ -103,6 +192,23 @@
 					<p>Son muchos los años que han pasado desde que el hombre conocido como Tarzán (Alexander Skarsgård) abandonara la selva de África. Ahora se hace llamar John Clayton III, Lord Greystoke, y se dedica a disfrutar del día a día de su aburguesada vida, que comparte con su amada esposa Jane (Margot Robbie). Sin embargo, su tranquila y aristocrática rutina de hombre casado dará un giro inesperado cuando el Parlamento requiera sus servicios como emisario comercial, y sea invitado a que vuelva de nuevo al Congo que una vez habitó.
 
 					Lo que no sabe aún Lord Greystoke es que en realidad todo forma parte de un siniestro plan ideado por el capitán belga Leon Rom (Christoph Waltz), quien actúa movido por la avaricia y la venganza. Eso sí, los artífices de esta trampa asesina tampoco tienen ni idea de lo que están a punto de desatar. </p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/tarzan.jpg"/>
+					<h4>ALEXANDER SKARSGÅRD</h4>
+					<h5>Tarzan</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/jane.jpg"/>
+					<h4>MARGOT ROBBIE</h4>
+					<h5>Jane Porter</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/waltz.jpg"/>
+					<h4>CHRISTOPH WALTZ</h4>
 				</div>
 			</div>
 		</div>
