--- a/comedia.html
+++ b/comedia.html
@@ -27,6 +27,24 @@
 					<p>Tiempo después, trabajando en un hotel de Zurich, Pine se encuentra con Roper, quien llega al hotel acompañado por su séquito de guardias. En estas circunstancias, Pine es contactado por la agente de inteligencia Burr (Olivia Colman) para formar parte de una importante misión que tiene como fin atrapar a Roper. Pine acepta el trabajo para vengar la muerte de su confidente, y pronto se ve enredado en una gran red de espías, traficantes y asesinos.</p>
 				</div>
 			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/accion/kevin.jpg"/>
+					<h4>KEVIN HART</h4>
+					<h5>Ben Barber</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/comedia/ice.jpg"/>
+					<h4>ICE CUBE</h4>
+					<h5>James Payton</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/comedia/olivia.jpg"/>
+					<h4>OLIVIA MUNN</h4>
+					<h5>Maya Cruz</h5>
+				</div>
+			</div>
 		</div>
 	</secion>
 	<secion class="jump">
@@ -38,6 +56,24 @@
 				</div>
 				<div class="col-xs-12 col-lg-6">
 					<P>Schmidt (Jonah Hill) y Jenko (Channing Tatum) son una pareja de recién graduados policías que trabajan en la labor de policías de parque y que al intentar atrapar a unos traficantes de drogas y no decirles sus derechos Miranda tienen que dejarlos ir, por lo que su jefe los manda de encubiertos a una escuela para que encuentren a la persona que vende drogas en ella. Schmidt y Jenko cambian sus nombres por los de Doug (Schmidt) y Brad (Jenko). Cuando llegan a la escuela hay un cambio en sus horarios y Doug va a las clases de teatro de Brad y Brad a las de química de Doug. Doug se hace popular y hace amistad con Erick (Dave Franco) uno de los distribuidores de drogas y con su novia Molly (Brie Larson), mientras Brad se hace amigo de los nerds de química. El par de amigos hacen una fiesta en su casa a la que acuden todos. Brad coge el celular de Erick y lo configura para que pueda escuchar todo lo que Erick hable. Para su mala suerte llegan los padres de Schmidt y hacen que todos salgan corriendo de la fiesta. </P>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/comedia/jenko.jpg"/>
+					<h4>CHANNING TATUM</h4>
+					<h5>Jenko</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/comedia/jonah.jpg"/>
+					<h4>JONAH HILL</h4>
+					<h5>Morton Schmidt</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/comedia/judy.jpg"/>
+					<h4>HOLLY ROBINSON PEETE</h4>
+					<h5>Judy Hoffs</h5>
 				</div>
 			</div>
 		</div>
@@ -53,9 +89,25 @@
 					<p>Un implacable agente del MI6 británico (Mark Strong), del grupo de operaciones especiales, descubre que tiene un hermano (Sacha Baron Cohen) muy diferente a él: fanático del fútbol y protagonista de numerosos y disparatados altercados dado su peculiar y conflictivo carácter. (FILMAFFINITY)</p>
 				</div>
 			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/comedia/norman.jpg"/>
+					<h4>SACHA BARON COHEN</h4>
+					<h5>Norman Butcher</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/comedia/mark.jpg"/>
+					<h4>MARK STRONG</h4>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/comedia/isla.jpg"/>
+					<h4>ISLA FISHER</h4>
+				</div>
+			</div>
 		</div>
 	</secion>
-	<secion>
+	<secion class="deadpool">
 		<div class="container">
 			<div class="row">
 				<h2>DEADPOOL</h2>
@@ -66,21 +118,23 @@
 					<p>Después de alistarse en el ejército, Wade Wilson (Ryan Reynolds) comienza a realizar trabajos de mercenario, y acabará siendo agente de las Fuerzas Especiales de EE.UU. Ya retirado, en su vida civil se dedica a ser un "matón a sueldo", ayudando a gente que no puede defenderse por sí sola. Su vida transcurre de forma normal, junto a su novia Vanessa (Morena Baccarin), hasta que llega la terrible noticia de que está gravemente enfermo.</p>
 				</div>
 			</div>
-		</div>
-	</secion>
-	<secion>
-		<div class="container">
 			<div class="row">
-				<div class="col-xs-12 col-lg-6"></div>
-				<div class="col-xs-12 col-lg-6"></div>
-			</div>
-		</div>
-	</secion>
-	<secion>
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-lg-6"></div>
-				<div class="col-xs-12 col-lg-6"></div>
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/comedia/deadpool.jpg"/>
+					<h4>RYAN REYNOLDS</h4>
+					<h5>Deadpool</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/comedia/morena.jpg"/>
+					<h4>MORENA BACCARIN</h4>
+					<h5>Copycat</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/comedia/polvo.jpg"/>
+					<h4>GINA CARANO</h4>
+					<h5>Polvo De Angel</h5>
+				</div>
 			</div>
 		</div>
 	</secion>
