--- a/crimen.html
+++ b/crimen.html
@@ -9,6 +9,193 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<section class="chapo">
+		<div class="cotainer">
+			<div class="row">
+				<h2>EL CHAPO</h2>
+				<div class="col-xs-12 col-lg-6">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/iJ82fuXG99I" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-6">
+					<p>La película relata la polémica fuga de Joaquín Guzmán Loera, conocido sobre todo como El Chapo Guzmán. En julio de 2015, el mafioso se escapó de la Cárcel de Máxima Seguridad del Altiplano, en México. Guzmán es conocido como el narcotraficante más peligroso del mundo. Su segunda huida fue vista como una forma de incompetencia del gobierno mexicano liderado por Peña Nieto. Esta película relata cómo el gángster consiguió crea un túnel subterráneo por el que consiguió evadir a la justicia. Además, la película ahondará en cómo logró tener las influencias políticas y legales suficientes para que los funcionarios de la cárcel hiciesen la vista gorda. Un plan elaborado al detalle que la cinta se encargará de mostrar a los espectadores.</p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/.jpg"/>
+					<h4></h4>
+					<h5></h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/.jpg"/>
+					<h4></h4>
+					<h5></h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/.jpg"/>
+					<h4></h4>
+					<h5></h5>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="jeruzalem">
+		<div class="cotainer">
+			<div class="row">
+				<h2>JERUZALEM</h2>
+				<div class="col-xs-12 col-lg-6">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/QTIwfN-4hZ4" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-6">
+					<p>Dos chicas estadounidenses siguen a un misterioso estudiante de antropología durante sus vacaciones en Israel. Pero el viaje se convierte en suplicio cuando quedan atrapadas en la mitad de un apocalipsis bíblico. Ahora deben sobrevivir dentro de los muros de una ciudad que recibe la furia del infierno.</p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/sarah.jpg"/>
+					<h4>DANIELLE JADELYN</h4>
+					<h5>Sarah</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/rachel.jpg"/>
+					<h4>YAEL GLOBGLAS</h4>
+					<h5>Rachel</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/kevin.jpg"/>
+					<h4>YON TUMARKIN</h4>
+					<h5>Kevin</h5>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="criminal">
+		<div class="cotainer">
+			<div class="row">
+				<h2>CRIMINAL</h2>
+				<div class="col-xs-12 col-lg-6">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/SbXSJj56Yp4" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-6">
+					<p>La historia de un hombre indicado en un cuerpo equivocado.En un último esfuerzo por detener un diabólico plan, en el que los recuerdos, secretos y habilidades de un operario fallecido de la CIA se implantan a un condenado a muerte muy peligroso, con la esperanza de que pueda completar misiones operativas. Una película dramática de acción trepidante dirigida por Ariel Vromen ('The iceman') y interpretada por Ryan Reynolds ('Deadpool'), Gal Gadot ('A Todo Gas 6'), Alice Eve ('Star Trek: En la oscuridad'), Gary Oldman ('El caballero oscuro'), Kevin Costner (' Los intocables de Elliot Ness'), Tommy Lee Jones ('Men in Black'). Una producción de BenderSpink Campbell, Grobman Films, Lionsgate y Millennium Films. Todo el set de rodaje fue grabado en Reino Unido.</p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/jonh.jpg"/>
+					<h4>VAL KILMER</h4>
+					<h5>Jonh Smith</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/wade.jpg"/>
+					<h4>STEPHEN DORFF</h4>
+					<h5>Wade Porter</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/marisol.jpg"/>
+					<h4>MARISOL NICHOLS</h4>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="alvin">
+		<div class="container">
+			<div class="row">
+				<h2></h2>
+				<div class="col-xs-12 col-lg-6">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/AAvczW9skXM" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-6">
+					<p>Después de probar suerte con un desesperanzado compositor -Dave Seville- tres ardillas muy peculiares, Alvin, Simon y Theodore, deciden hacer de la casa de Dave la suya propia. Enseguida las ardillas se dan cuenta de la necesidad de convencer a Dave de que las deje vivir en su casa para demostrarle que no sólo pueden andar como una persona¡sino que pueden cantar! No tardarán en revelarse como la sensación musical del momento, mientras Dave se convierte en algo más que en su compositor; en su padre. Los problemas comienzan cuando las ardillas comienzan a darse cuenta de su éxito y se revelan contra Dave. Sin embargo, pronto descubriran que haber formado una familia con Dave es el mayor éxito de todos.</p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/david.jpg"/>
+					<h4>JASON LEE</h4>
+					<h5>David Seville</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/alvin.jpg"/>
+					<h4>JUSTIN LONG</h4>
+					<h5>Alvin Seville</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/simone.jpg"/>
+					<h4>MATTHEW GRAY GLUBER</h4>
+					<h5>Simone</h5>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="animal">
+		<div class="cotainer">
+			<div class="row">
+				<h2>ANIMAL KINGDOM</h2>
+				<div class="col-xs-12 col-lg-6">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/YNszOl14AWg" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-6">
+					<p>Tras morir su madre, Joshua "J" Cody, se va a vivir a Melbourne con sus tíos, con los que, hasta ahora, no ha tenido ningún tipo de contacto. Allí estará bajo la custodia de su abuela Smurf. Aunque se adaptará rápidamente a su nueva vida, no tardará en descubrir que este mundo es mucho más peligroso de lo que nunca había imaginado. Uno de los policías, Nathan Leckie, debe atraer a J a la policía, para que sea su señuelo y poder protegerle de policías corruptos y de un submundo paranoico y vengativo. Para sobrevivir, J deberá elegir qué lugar quiere ocupar dentro de este peligroso juego.</p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/janine.jpg"/>
+					<h4>JACKI WEAVER</h4>
+					<h5>Janine Cody</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/guy.jpg"/>
+					<h4>GUY PEARCE</h4>
+					<h5>Leckie</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/joel.jpg"/>
+					<h4>JOEL EDGERTON</h4>
+					<h5>Barry Brown</h5>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="london">
+		<div class="cotainer">
+			<div class="row">
+				<h2>LONDON</h2>
+				<div class="col-xs-12 col-lg-6">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/xraPQM1ki28" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-6">
+					<p>Segunda parte de 'Objetivo: La Casa Blanca', donde Mike Banning (Gerard Butler), agente del Servicio Secreto estadounidense salvó a los Estados Unidos del ataque de un comando coreano. En esta ocasión, Banning acompañará al Presidente de los Estados Unidos a Londres, donde asistirán al funeral del Primer Ministro británico, fallecido en extrañas circunstancias. El evento, que empieza siendo uno de los más seguros jamás celebrados, se convierte en el punto de partida para un complot terrorista que pretende acabar con los principales mandatarios del mundo y sembrar el terror en todas las naciones del planeta. Así el presidente y sus agentes del Servicio Secreto, entre los que se encuentra Banning, habrán de unir fuerzas con un agente británico del MI-6 para evitar un ataque que de perpretarse haría realidad la terrorífica </p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/mike.jpg"/>
+					<h4>GERARD BUTLER</h4>
+					<h5>Mike Banning</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/allan.jpg"/>
+					<h4>MORGAN FRREMAN</h4>
+					<h5>Allan Trumbull</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/crimen/aaron.jpg"/>
+					<h4>AARON ECKHART</h4>
+					<h5>Pr. Benjamin</h5>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+
 	<script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>  
 	<script src="js/main.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
