--- a/familiar.html
+++ b/familiar.html
@@ -9,6 +9,197 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<section class="guardianes">
+		<div class="container">
+			<div class="row">
+				<h2>EL ORIGEN DE LOS GUARDIANES</h2>
+				<div class="col-xs-12 col-lg-6">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/zpngGG1ayZ0" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-6">
+					<p>¿Qué pasaría si en las historias de Santa Claus (Alec Baldwin), el Conejo de Pascua (Hugh Jackman), el Hada de los Dientes (Isla Fisher) y Sandy, el hombre de arena, hubiera más cosas de las que nos podíamos imaginar? ¿Qué ocurriría si esos benévolos repartidores de regalos, huevos, dinero y sueños fueran mucho más de lo que parecen? ¡En la película de DreamWorks Animation, "El origen de los Guardianes", lo son! Inmortales, fuertes y veloces, estos héroes de la infancia se enfrentan a la misión de proteger la inocencia y la imaginación de los niños de todas las edades aprovechando al máximo sus poderes. Cuando se presenta una amenaza con un plan para borrar a los Guardianes de la existencia robándoles a los niños sus esperanzas y sus sueños, estos entrañables guerreros defensores necesitan la ayuda de Jack Escarcha (Chris Pine), un nuevo y reticente compañero que preferiría pasar un buen día en la nieve a salvar el mundo. </p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/hugh.jpg"/>
+					<h4>HUGH JACKMAN</h4>
+					<h5>E. Aster Bunnymund</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/jack.jpg"/>
+					<h4>CHRIS PINE</h4>
+					<h5>Jack Frost</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/isla.jpg"/>
+					<h4>ISLA FISHER</h4>
+					<h5>Ratoncito Perez</h5>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="birds">
+		<div class="container">
+			<div class="row">
+				<h2>ANGRY BIRDS</h2>
+				<div class="col-xs-12 col-lg-6">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/wd1xG_gGoAg" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-6">
+					<p>¿Por qué los Angry Birds están siempre tan enfadados? En esta película por fin lo vamos a averiguar... La historia nos lleva a una isla poblada enteramente por pájaros que viven felices y que en su mayoría no vuelan. En este lugar paradisiaco, hay tres outsiders. Se trata de Red, un pájaro con problemas de mal genio, Chuck, un pájaro amarillo hiperactivo, y Bomb, un pájaro negro muy volátil. Aunque siempre han tratado de adaptarse, ninguno de los tres ha terminado nunca de encajar en esta isla de aves no voladoras. 
+
+					Todo cambia cuando llegan a la isla unos misteriosos cerdos de color verde. Ahí empiezan de verdad los problemas. Será entonces cuando a estos tres pájaros un tanto marginados y excéntricos les toque averiguar lo que los cerdos recién llegados están tramando.
+					</p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/red.jpg"/>
+					<h4>JASON SUDEIKIS</h4>
+					<h5>Red</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/josh.jpg"/>
+					<h4>JOSH GAD</h4>
+					<h5>Chuck</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/peter.jpg"/>
+					<h4>PETER DINKLAGE</h4>
+					<h5>Mighty Eagle</h5>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="peluda">
+		<div class="container">
+			<div class="row">
+				<h2>PELUDA VENGANZA</h2>
+				<div class="col-xs-12 col-lg-6">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/wd1xG_gGoAg" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-6">
+					<p>Después de mudarse con su familia a Oregon para comenzar un nuevo empleo supervisando la construcción de un complejo "ecológico", Dan Sanders piensa que su mayor problema será ayudar a su esposa Tammy, una amante de la ciudad, y a su hijo Trey, un chico fóbico de la naturaleza, a ajustarse a su nuevo entorno. Pero sus problemas verdaderos comienzan cuando los animales locales descubren que él tiene un papel central en la construcción que amenaza con destruir su hábitat, ¡y se dará cuenta de todos los problemas que un grupo de aguerridas criaturas puede causar!</p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/dan.jpg"/>
+					<h4>BRENDAN FRASER</h4>
+					<h5>Dan Sanders</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/brooke.jpg"/>
+					<h4>BROOKE SHIELDS</h4>
+					<h5>Tammy Sanders</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/matt.jpg"/>
+					<h4>MATT PROKOP</h4>
+					<h5>Tyler Sanders</h5>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="heidi">
+		<div class="container">
+			<div class="row">
+				<h2>HEIDI</h2>
+				<div class="col-xs-12 col-lg-6">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/vH7NITxz7gc" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-6">
+					<p>Heidi es una huérfana de ocho años que se ha criado en las montañas suizas junto a su abuelo. Pero un día su tía decide ir a buscarla y llevársela de nuevo a la ciudad, para educarla en la casa de una rica familia en Frankfurt. Así la joven Heidi conocerá a Clara, una niña con discapacidad que se mueve en silla de ruedas. A pesar de su amistad con ella Heidi querrá volver a las montañas con su abuelo, a quien extraña cada día.</p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/gary.jpg"/>
+					<h4>GARRY CHALK</h4>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/barr.jpg"/>
+					<h4>KATHLEEN BARR</h4>	
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/lan.jpg"/>
+					<h4>LAN JAMES CORLETT</h4>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="oddball">
+		<div class="container">
+			<div class="row">
+				<h2>ODDBALL</h2>
+				<div class="col-xs-12 col-lg-6">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/P7AV2ZYlxvI" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-6">
+					<p>Basada en la historia real de Allan y su perro, quien convenció a las autoridades locales para permitir que su mascota protegiera una colonia de pequeños pingüinos en Middle Island del ataque de ciertos animales salvajes. Al tener éxito en su campaña, el can fue utilizado para proteger a otros animales en peligro de extinción en Australia. (FILMAFFINITY)</p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/shane.jpg"/>
+					<h4>SHANE JACOBSON</h4>
+					<h5>Swampy</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/emily.jpg"/>
+					<h4>SARAH SNOOK</h4>
+					<h5>Emily Marsh</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/alan.jpg"/>
+					<h4>ALAN TUDYK</h4>
+					<h5>Bradley Slater</h5>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="gigantes">
+		<div class="container">
+			<div class="row">
+				<h2>LITTLE GIANTS</h2>
+				<div class="col-xs-12 col-lg-6">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/MN5aY9Fq2Nk" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-6">
+					<p>Danny O'Shea (Rick Moranis) es el entrenador del Pee-Wee Cowboys, un pequeño equipo de fútbol americano de Urbania (Ohio), su población. Su hermano Kevin (Ed O'Neill) siempre ha sido más popular, más fuerte y más guapo que él, además es un futbolista profesional que ha obtenido una gran popularidad durante su carrera. Ahora Kevin regresa a su pueblo con su familia y para crear una liga juvenil.
+
+					Becky (Shawna Waldron), la hija de Danny, ha sido siempre la jugadora más destacada de su equipo, pero su tío Kevin la rechaza por ser una chica y la prohíbe competir en la liga.
+					Indignado por ello, Danny decide montar un equipo con todos aquellos muchachos que han sido rechazados por su hermano. De este modo podemos encontrar en el equipo a un chico obeso, a otro bastante patoso, o a otro que es incapaz de correr.
+					</p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/becky.jpg"/>
+					<h4>SHAWNA WALDRON</h4>
+					<h5>Becky O'Shea</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/junior.jpg"/>
+					<h4>DEVON SAWA</h4>
+					<h5>Junior Floyd</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/familiar/rick.jpg"/>
+					<h4>RICK MORANIS</h4>
+					<h5>Danny O'Shea</h5>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>  
 	<script src="js/main.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
