--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</div>
 		</div>
 	</section>
-	<section>
+	<section class="peliculas">
 		<div class="container">
 			<div class="row">
 				<div class=" col-xs-6 col-lg-4">
@@ -46,6 +46,10 @@
 							<img  src="img/accion/anillos.jpg">
 							<p>Señor De Los Anillo</p>
 						</a>
+					</div>
+					<div class = "criminal">
+						<img src="img/criminal/london.jpg">
+						<p>London</p>
 					</div>
 					<div class = "comedia">
 						<a href="#" class="c1">
@@ -56,10 +60,6 @@
 					<div class = "familiar">
 						<img src="img/familiar/guardianes.jpg">
 						<p>guardianes</p>
-					</div>
-					<div class = "criminal">
-						<img src="img/criminal/chapo.jpg">
-						<p>El chapo</p>
 					</div>
 					<div class = "terror">
 						<img src="img/terror/huerfana.jpg">
@@ -145,10 +145,6 @@
 					</div>
 				</div>
 				<div class=" col-xs-6 col-lg-4">
-					<div class = "terror">
-						<img src="img/terror/exor.jpg">
-						<p>exor</p>
-					</div>
 					<div class = "familiar">
 						<img src="img/familiar/Oddball.jpg">
 						<p>Oddball</p>
@@ -171,25 +167,11 @@
 							<p>Tarzan</p>
 						</a>
 					</div>
-					<div class = "criminal">
-						<img src="img/criminal/london.jpg">
-						<p>London</p>
-					</div>
 					<div class = "familiar">
 						<img src="img/familiar/pequenos.jpg">
 						<p>pequenos</p>
 					</div>
-					<div class = "terror">
-						<img src="img/terror/insidios.jpg">
-						<p>insidios</p>
-					</div>
 				</div>
-			</div>
-		</div>
-	</section>
-	<section>
-		<div class="container">
-			<div class="row">
 			</div>
 		</div>
 	</section>
