--- a/terror.html
+++ b/terror.html
@@ -9,6 +9,137 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<section class="huerfana">
+		<div class="container">
+			<div class="row">
+				<h2>LA HUERFANA</h2>
+				<div class="col-xs-12 col-lg-12">
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/gsHuk7EARdA" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-12">
+					<p>Kate (Vera Farmiga) y John Coleman (Peter Sarsgaard) están desolados tras la muerte de su hijo. A pesar de tener otros dos hijos, la pareja decide adoptar a Esther, una niña huérfana de 9 años. Lo que ellos no saben es que hay extraños acontecimientos que forman parte del historial de la pequeña; es por ello, que cuando la niña entra en sus vidas, comienzan a abrirse nuevos misterios y peligros que harán peligrar la vida del matrimonio.</p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/terror/esther.jpg"/>
+					<h4>ISABEELLE FUHRMAN</h4>
+					<h5>Esther</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/terror/vera.jpg"/>
+					<h4>VERA FARMIGA</h4>
+					<h5>Kate Coleman</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/terror/max.jpg"/>
+					<h4>ARYANA ENGINEER</h4>
+					<h5>Max Coleman</h5>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="lamal">
+		<div class="container">
+			<div class="row">
+				<h2>LA MALDICION</h2>
+				<div class="col-xs-12 col-lg-12">
+					<iframe width="560" height="100%" src="https://www.youtube.com/embed/fwjjfHXKrDE" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-12">
+					<p>Rika, una asistente social, acude a una casa sobre la que pesa una maldición, para cuidar de Sashie, una anciana postrada en cama. Allí descubre a un niño encerrado en un armario, poco antes de ser atacada por un espíritu maligno. Días antes, Hitomi, el hijo de Sashie, también fue atacado por el fantasma tras haber presenciado la aparición del mismo niño. Cuando la hermana de Hitomi llega a la casa, descubre a Rika en estado de “shock”. Entonces interviene Toyama, el policía que estuvo investigando años atrás la tragedia que sacudió a esa casa maldita: un hombre asesinó a su esposa, y su hijo pequeño jamás fue encontrado…</p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/terror/karen.jpg"/>
+					<h4>SARAH MICHELLE GELLAR</h4>
+					<h5>Karen Davis</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/terror/fuji.jpg"/>
+					<h4>TAKATO FUJI</h4>
+					<h5>Kayako Saeki</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/terror/yuya.jpg"/>
+					<h4>YüYA OZAKI</h4>
+					<h5>Tishio Saeki</h5>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="conjuro">
+		<div class="container">
+			<div class="row">
+				<h2>THE CONJURING 2</h2>
+				<div class="col-xs-12 col-lg-12">
+					<iframe width="560" height="100%" src="https://www.youtube.com/embed/fFS929KKVAQ" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-12">
+					<p>Lorraine y Ed Warren, quienes, en una de sus más aterradoras investigaciones paranormales, viajan al norte de Londres para ayudar a una madre soltera con cuatro hijos que vive en una casa repleta de espíritus malignos.</p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/terror/lorraine.jpg"/>
+					<h4>VERA FARMIGA</h4>
+					<h5>Lorraine Warren</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/terror/ed.jpg"/>
+					<h4>PATRICK WILSON</h4>
+					<h5>Ed Warren</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/terror/janet.jpg"/>
+					<h4>MADISON WOLFE</h4>
+					<h5>Janet Hodgson</h5>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="sinestir">
+		<div class="container">
+			<div class="row">
+				<h2>SINISTER</h2>
+				<div class="col-xs-12 col-lg-12">
+					<iframe width="560" height="100%" src="https://www.youtube.com/embed/_kbQAJR9YWQ" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="col-xs-12 col-lg-12">
+					<p>Ellison (Ethan Hawke, 'Gattaca'), es un periodista especializado en escribir artículos y novelas sobre casos de crímenes célebres. Para poder dedicarse a esta tarea en cuerpo y alma, ha instaurado una sistema de vida itinerante un tanto particular con su familia: se trasladan todos juntos de condado en condado para instalarse durante un tiempo en el lugar de los hechos y así poder investigar en profundidad cada uno de los casos.
+
+					Una de estas investigaciones le llevará a una casa donde toda la familia murió asesinada. Y allí se quedará a vivir con su mujer y sus hijos para poder inspirarse mejor y recabar los datos necesarios para la confección de su novela. Sin embargo, una vez en la casa, la familia descubrirá una serie de documentación y de cintas de vídeo en las que se recogen los detalles de estos misteriosos homicidios.</p>
+				</div>
+			</div>
+			<div class="row">
+				<h3>ACTORES PRINCIPALES</h3>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/terror/ethan.jpg"/>
+					<h4>ETHAN HAWKE</h4>
+					<h5>Ellison Oswalt</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/terror/james.jpg"/>
+					<h4>JAMES RANSONE</h4>
+					<h5>Oficial</h5>
+				</div>
+				<div class="col-xs-4 col-lg-4">
+					<img src="actores/terror/nicolas.jpg"/>
+					<h4>NICHOLAS KING</h4>
+					<h5>Bughuul</h5>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+
+
+
 	<script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>  
 	<script src="js/main.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
