--- a/accion.html
+++ b/accion.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header>
-		<div class="container text-center">
+		<div class="container">
 			<h1>CINE ALIVANE
 				 <i class="fa fa-times" aria-hidden="true"></i>
 			</h1>
