--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
 			</div>
 		</div>
 	</section>
-	<div class="descriptionAccion">
+	<div class="imagenes">
+		<div class="descriptionAccion">
 		<section class="anillo">
 			<div class="container">
 				<div class="row">
@@ -1003,6 +1004,7 @@
 				</div>
 			</div>
 		</section>
+	</div>
 	</div>
 
 
